tests/baselines/reference/paramTagNestedWithoutTopLevelObject(strict=true).errors.txt
paramTagNestedWithoutTopLevelObject.js(2,20): error TS8032: Qualified name 'xyz.p' is not allowed without a leading '@param {object} xyz'.
paramTagNestedWithoutTopLevelObject.js(4,12): error TS7006: Parameter 'xyz' implicitly has an 'any' type.


==== paramTagNestedWithoutTopLevelObject.js (2 errors) ====
    /**
     * @param {number} xyz.p
                       ~~~~~
!!! error TS8032: Qualified name 'xyz.p' is not allowed without a leading '@param {object} xyz'.
     */
    function g(xyz) {
               ~~~
!!! error TS7006: Parameter 'xyz' implicitly has an 'any' type.
        return xyz.p;
    }